src/examples/errors/05_return_type_mismatch.veri
// Error: Return type doesn't match signature
// Expected error: E005 - Mismatched return type

fn get_number() -> int {
    true
}

fn main() {
    let x: int = get_number();
}
